Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-29984

innodb_fast_shutdown=0 fails to report change buffer merge progress

    XMLWordPrintable

Details

    Description

      We should get the change buffer merge process reported in the log In the same way as it was done in MDEV-22577 "innodb_fast_shutdown=0 fails to report purge progress"

      Currently, with innodb_fast_shutdown=0, the change buffer merge can take some time, a user might think that the server hans on shutdown as there are no updates in the server log file.

      Attachments

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              ralf.gebhardt Ralf Gebhardt
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 2.5h
                  2.5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.